--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,25 @@
   padding: 0;
 }
 
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+.container {
+  width: 1300px;
+  margin: auto;
+}
+
 header {
   height: 400px;
-  background-color: red;
+  background-color: #224C77;
+  position: relative;
 }
 
 .menu {
   height: 80px;
-  background-color: green;
+  line-height: 80px;
+  text-align: center;
 }
 
 .menu::after {
@@ -25,20 +36,34 @@ header {
 }
 
 .nav-sin, .nav-des {
-  width: 35%;
+  width: 37.5%;
 }
 
 .logo {
-  width: 30%;
+  width: 25%;
 }
 
 .menu ul li {
   list-style: none;
+  padding: 0 7px;
   display: inline-block;
 }
 
 .menu ul a {
   color: white;
+  font-size: 12px;
   text-decoration: none;
   text-transform: uppercase;
+}
+
+.menu ul li:hover {
+  text-decoration: underline;
+}
+
+.banner img {
+  height: 70%;
+  width: 70%;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
