--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,24 @@ button {
   bottom: 0;
   right: 0;
 }
+
+.banner h1 {
+  color: white;
+  font-size: 50px;
+  width: 30%;
+  position: absolute;
+  top: 170px;
+  left: 160px;
+}
+
+.banner button {
+  position: absolute;
+  top: 320px;
+  left: 160px;
+  padding: 20px;
+}
+
+.intro {
+  height: 120px;
+  background-color: lightgray;
+}
