--- a/css/style.css
+++ b/css/style.css
@@ -82,18 +82,32 @@ button {
   font-size: 50px;
   width: 30%;
   position: absolute;
-  top: 170px;
-  left: 160px;
+  top: 30%;
+  left: 10%;
 }
 
 .banner button {
   position: absolute;
-  top: 320px;
-  left: 160px;
+  top: 60%;
+  left: 10%;
   padding: 20px;
 }
 
 .intro {
   height: 120px;
   background-color: lightgray;
+  text-align: center;
+  position: relative;
+}
+
+.testo-ads {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.testo-ads p {
+  padding-top: 15px;
+  color: gray;
 }
