--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,16 @@ body {
 header {
   height: 500px;
   background-color: #224C77;
+}
+
+.container {
+  width: 80%;
+  height: 100%;
+  margin: auto;
+  background-image: url(../img/img/background-header.png);
+  background-repeat: no-repeat;
+  background-size: 65%;
+  background-position: 106% 106%;
   position: relative;
 }
 
@@ -31,11 +41,16 @@ header {
 }
 
 .nav-sin, .nav-des {
-  width: 37.5%;
+  width: 42.5%;
 }
 
 .logo {
-  width: 25%;
+  width: 15%;
+  text-align: left;
+}
+
+.logo svg {
+  vertical-align: sub;
 }
 
 .menu ul li {
@@ -69,26 +84,20 @@ button {
   border: 1px solid white;
 }
 
-.banner img {
-  height: 80%;
-  position: absolute;
-  bottom: 0;
-  right: 0;
-}
-
 .banner h1 {
   color: white;
   font-size: 50px;
-  width: 30%;
+  width: 40%;
   position: absolute;
-  top: 30%;
-  left: 15%;
+  top: 45%;
+  left: 0;
+  transform: translate(0, -50%);
 }
 
 .banner button {
   position: absolute;
   top: 60%;
-  left: 15%;
+  left: 0%;
   padding: 20px;
 }
 
